--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html ng-app="myApp">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <title>
+        Portfolio | SethDS
+    </title>
 </head>
 <body ng-controller="mainCtrl">
 <div class="main-container">
@@ -16,5 +19,6 @@
 <script src="app.js"></script>
 <script src="main-service.js"></script>
 <script src="portfolio-controller.js"></script>
+<script src="main-controller.js"></script>
 </body>
 </html>
