--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body ng-controller="mainCtrl">
 <div class="main-container">
-    <div class="nav"></div>
+    <div class="nav">
+        <div class="nav-item"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item"><p>portfolio</p></div>
+        <div class="nav-item"><p>about</p></div>
+    </div>
         <ui-view></ui-view>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footer-item"><p>SethDS</p></div>
+    </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
