--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="myApp">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
-    <link href="https://fonts.googleapis.com/css?family=Belleza|Julius+Sans+One|Maven+Pro" rel="stylesheet">        Portfolio | SethDS
-    </title>
+    <link href="https://fonts.googleapis.com/css?family=Belleza|Julius+Sans+One|Maven+Pro" rel="stylesheet">
+    <title>SethDS</title>
 </head>
 <body ng-controller="mainCtrl">
 <div class="main-container">
