--- a/about.html
+++ b/about.html
@@ -21,17 +21,35 @@
         <div class="skills">
             <div class="skills-content front-end">
                 <p class="skills-heading">front-end</p>
-            </div>
-            <div class="skills-content server-side">
-                <p class="skills-heading">server</p>
+                <ul>
+                    <li>javascript</li>
+                    <li>html/css</li>
+                    <li>sass/less</li>
+                    <li>angularjs</li>
+                    <li>jquery</li>
+                </ul>
             </div>
             <div class="skills-content back-end">
-                <p class="skills-heading">database</p>
+                <p class="skills-heading">back-end</p>
+                <ul>
+                    <li>nodejs</li>
+                    <li>massive</li>
+                    <li>express</li>
+                    <li>gulp</li>
+                    <li>postgresql</li>
+                </ul>
             </div>
 
         </div>
     </div>
     <div class="about-contact">
-        <p>contact</p>
+        <p class="contact-header">contact</p>
+
+        <div class="contact-content-container">
+            <p class="contact-content">sethdavidsutherland@gmail.com</p>
+            <p class="contact-content">3853298465</p>
+            <p class="contact-content"><a href="https://github.com/SethDS">GITHUB</a></p>
+            <p class="contact-content"><a href="">LINKEDIN</a></p>
+        </div>
     </div>
 </div>
