--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Belleza|Julius+Sans+One|Maven+Pro" rel="stylesheet">
     <title>SethDS</title>
 </head>
-<body ng-controller="mainCtrl">
-<div class="main-container">
-    <div class="nav">
-        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
-        <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
-        <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
-    </div>
-        <ui-view></ui-view>
-    <div class="footer">
-        <div class="footer-item"><p>SethDS</p></div>
-    </div>
-</div>
+<body>
+<ui-view></ui-view>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
