--- a/about.html
+++ b/about.html
@@ -1,55 +1,71 @@
-<div class="about-main-container">
-    <div class="about-header">
-        <p class="about-header-main">web developer</p>
-        <p class="about-header-small">front-end  |  back-end</p>
+<div class="main-container-about">
+    <div class="nav">
+        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
+        <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
     </div>
-    <div class="about-pic">
-        <img class="about-pic-pic" src="./profilePic1.jpg">
-    </div>
-    <div class="about-me">
-        <p class="about-me-header">about</p>
-        <p class="about-me-more">
-            I believe that if you are not being challenged, then something is wrong with your code. <br>
-            I believe that coding is creative, logical, structured and unstructured all at once. <br>
-            I believe that a single website can change the world. <br>
-            I believe in creativity, mastery of skills and perseverance. <br>
-        </p>
-    </div>
-    <div class="about-skills">
-        <p class="skills-header">skills</p>
 
-        <div class="skills">
-            <div class="skills-content front-end">
-                <p class="skills-heading">front-end</p>
-                <ul>
-                    <li>javascript</li>
-                    <li>html/css</li>
-                    <li>sass/less</li>
-                    <li>angularjs</li>
-                    <li>jquery</li>
-                </ul>
-            </div>
-            <div class="skills-content back-end">
-                <p class="skills-heading">back-end</p>
-                <ul>
-                    <li>nodejs</li>
-                    <li>massive</li>
-                    <li>express</li>
-                    <li>gulp</li>
-                    <li>postgresql</li>
-                </ul>
-            </div>
+    <div class="about-main-container">
+        <div class="about-header">
+            <p class="about-header-main">web developer</p>
+            <p class="about-header-small">front-end  |  back-end</p>
+        </div>
+        <div class="about-pic">
+            <img class="about-pic-pic" src="./profilePic1.jpg">
+        </div>
+        <div class="about-me">
+            <p class="about-me-header">about</p>
+            <p class="about-me-more">
+                I believe that if you are not being challenged, then something is wrong with your code. <br>
+                I believe that coding is creative, logical, structured and unstructured all at once. <br>
+                I believe that a single website can change the world. <br>
+                I believe in creativity, mastery of skills and perseverance. <br>
+            </p>
+        </div>
+        <div class="about-skills">
+            <p class="skills-header">skills</p>
 
+            <div class="skills">
+                <div class="skills-content front-end">
+                    <!--<p class="skills-heading">front-end</p>-->
+                    <ul>
+                        <li>javascript</li>
+                        <li>html/css</li>
+                        <li>sass/less</li>
+                        <li>angularjs</li>
+                        <li>jquery</li>
+                    </ul>
+                </div>
+                <div class="skills-content back-end">
+                    <!--<p class="skills-heading">back-end</p>-->
+                    <ul>
+                        <li>nodejs</li>
+                        <li>massive</li>
+                        <li>express</li>
+                        <li>gulp</li>
+                        <li>postgresql</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+        <div class="about-contact">
+            <p class="contact-header">contact</p>
+
+            <div class="contact-content-container">
+                <p class="contact-content">sethdavidsutherland@gmail.com</p>
+                <p class="contact-content">3853298465</p>
+                <p class="contact-content"><a href="https://github.com/SethDS">GITHUB</a></p>
+                <p class="contact-content"><a href="https://www.linkedin.com/in/sutherlandseth/">LINKEDIN</a></p>
+            </div>
         </div>
     </div>
-    <div class="about-contact">
-        <p class="contact-header">contact</p>
 
-        <div class="contact-content-container">
-            <p class="contact-content">sethdavidsutherland@gmail.com</p>
-            <p class="contact-content">3853298465</p>
-            <p class="contact-content"><a href="https://github.com/SethDS">GITHUB</a></p>
-            <p class="contact-content"><a href="">LINKEDIN</a></p>
-        </div>
+    <div class="footer">
+        <div class="footer-item"><p>SethDS</p></div>
     </div>
 </div>
+
+
+
+
