--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,29 @@
-<div class="port-container">
-
-    <div class="port-project" ng-repeat="proj in projects">
-        <div class="port-project-inner" ui-sref='project({id: proj.id})'>
-
-            <p class="port-project-name">{{proj.name}}</p>
-
-            <div class="port-project-stack">
-                <p>{{proj.stack}}</p>
-            </div>
-        </div>
+<div class="main-container">
+    <div class="nav">
+        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
+        <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
     </div>
 
 
+        <div class="port-container">
+
+            <div class="port-project" ng-repeat="proj in projects">
+                <div class="port-project-inner" ui-sref='project({id: proj.id})'>
+
+                    <p class="port-project-name">{{proj.name}}</p>
+
+                    <div class="port-project-stack">
+                        <p>{{proj.stack}}</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+
+    <div class="footer">
+        <div class="footer-item"><p>SethDS</p></div>
+    </div>
 </div>
