--- a/project.html
+++ b/project.html
@@ -1,5 +1,32 @@
-<div class="project-container">
+<div class="main-container">
+    <div class="nav">
+        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
+        <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
+    </div>
 
-    <h1>{{project.name}}</h1>
+    <div class="project-container">
 
+        <div class="project-heading">
+            <p>{{project.name}}</p>
+            <div class="project-heading-desc">{{project.description}}</div>
+        </div>
+
+        <div class="project-star">
+            <div class="project-star-info">{{project.situation}}</div>
+            <div class="project-star-info">{{project.task}}</div>
+            <div class="project-star-info">{{project.action}}</div>
+            <div class="project-star-info">{{project.result}}</div>
+        </div>
+
+        <div class="project-screenshots">
+            <img src="{{img in images}}" ng-repeat="img in project.images">
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <div class="footer-item"><p>SethDS</p></div>
+    </div>
 </div>
+
