--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="project-screenshots">
-            <img src="{{img in images}}" ng-repeat="img in project.images">
+            <img src="{{img.path}}" ng-repeat="img in project.images">
         </div>
     </div>
 
