--- a/project.html
+++ b/project.html
@@ -20,8 +20,9 @@
         </div>
 
         <div class="project-screenshots">
-            <img src="{{img.path}}" ng-repeat="img in project.images">
+            <img class="project-img" src="{{img.path}}" ng-repeat="img in project.images">
         </div>
+
     </div>
 
 
