--- a/project.html
+++ b/project.html
@@ -17,6 +17,7 @@
             <div class="project-tech-info" ng-repeat="tech in project.tech">{{tech}}</div>
 
             <p class="more-info" ng-click="showInfo()">more info</p>
+            <a href="{{project.link}}"><p class="visit-site">visit site</p></a>
         </div>
 
         <div class="project-star">
