--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="nav">
-        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item nav-name" ui-sref="portfolio"><p>seth<span class="david">david</span> sutherland</p></div>
         <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
         <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
     </div>
