--- a/project.html
+++ b/project.html
@@ -1,9 +1,12 @@
 <div class="main-container">
     <div class="nav">
-        <div class="nav-item nav-name"><p>seth<span class="david">david</span> sutherland</p></div>
+        <div class="nav-item nav-name" ui-sref="portfolio"><p>seth<span class="david">david</span> sutherland</p></div>
         <div class="nav-item nav-hover" ui-sref="portfolio"><p>portfolio</p></div>
         <div class="nav-item nav-hover" ui-sref="about"><p>about</p></div>
     </div>
+
+    <div class="next-project" ng-click="changeProject({{project.id}}, next)">next</div>
+    <div class="previous-project" changeProject="({{project.id}}, prev)">previous</div>
 
     <div class="project-container">
 
