--- a/public/project.html
+++ b/public/project.html
@@ -20,7 +20,7 @@
             <div class="project-tech-info" ng-repeat="tech in project.tech">{{tech}}</div>
 
             <p class="more-info" ng-click="showInfo()">more info</p>
-            <a href="{{project.link}}"><p class="visit-site">visit site</p></a>
+            <a href="{{project.link}}"><p class="visit-site" ui-sref="{{project.uilink}}">visit site</p></a>
         </div>
 
         <div class="project-star">
