Some adjustments to the skills sections.

--- a/public/about.html
+++ b/public/about.html
@@ -33,6 +33,8 @@
                         <li>html/css</li>
                         <li>sass/less</li>
                         <li>angularjs</li>
+                        <li>reactjs</li>
+                        <li>d3js</li>
                         <li>jquery</li>
                     </ul>
                 </div>
